Security added to endpoints